--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "Public message board using React for frontend and Express for backend!",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server \" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client &&  npm run build --prefix client"
   },
   "author": "James Huang",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^7.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.2.1",
+    "mongoose": "^6.2.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.0",
     "nodemon": "^2.0.15"
   }
 }
