--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "concurrently": "^7.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.2.1"
+    "mongoose": "^6.2.1",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
